--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </script>
 
     <meta property="og:title" content="امین حدادی - Amin Haddadi">
-    <meta property="og:description" content="سایت شخصی امین حدادی شامل شعرها، کتاب‌ها و ترجمه‌های ادبی">
+    <meta property="og:description" content="سایت شخصی امین حدادی، کتاب‌ها و ترجمه‌های ادبی">
     <meta property="og:image" content="https://aminhadadi.com/images/profile.jpg">
     <meta property="og:url" content="https://aminhadadi.com">
     <meta property="og:type" content="website">
