--- a/index.html
+++ b/index.html
@@ -19,12 +19,13 @@
     <link rel="canonical" href="https://aminhadadi.com/" />
 
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5KR9EZZ3XL"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-M67NQYVLLZ"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'G-5KR9EZZ3XL');
+    
+      gtag('config', 'G-M67NQYVLLZ');
     </script>
 
     <meta property="og:title" content="امین حدادی - Amin Haddadi">
